--- a/landingpage/styles/Home.module.css
+++ b/landingpage/styles/Home.module.css
@@ -1,6 +1,8 @@
 .container {
-  padding: 0;
-  margin: 0;
+  padding:  0;
+  margin: 1em 4em;
+  background-color: #F0EABE;
+  border: 1px black solid;
 }
 
 .main {
@@ -30,7 +32,7 @@
 }
 
 .title a {
-  color: rgba(215, 192, 43, 0.861);
+  color: rgb(0 0 0 / 25%);
   text-decoration: none;
 }
 
@@ -72,7 +74,7 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid black;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
@@ -83,8 +85,8 @@
 .card:hover,
 .card:focus,
 .card:active {
-  color: #a59225;
-  border-color: #a59225;
+  color: black;
+  border-color: black;
   transform: translateY(0);
 
 }
@@ -128,7 +130,7 @@
 
 .navbarr{
   display: flex;
-  top: 15%;
+  top: 18%;
   position: absolute;
   left: 0;
   align-items: center;
@@ -164,11 +166,11 @@
 
 .butt {
   position: absolute;
-  right: 2em;
-  top: 2.7em;
+  right: 7em;
+  top: 3em;
  --button_radius: 0.2em;
  --button_color: white;
- --button_outline_color: #000000;
+ --button_outline_color: rgb(0 0 0 / 75%);
  font-size: 15px;
  border: none;
  border-radius: var(--button_radius);
